--- a/src/view/MainView.fxml
+++ b/src/view/MainView.fxml
@@ -1,11 +1,44 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
+<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.MainController">
    <children>
-      <ChoiceBox layoutX="218.0" layoutY="188.0" prefWidth="150.0" />
+      <FlowPane prefHeight="65.0" prefWidth="858.0">
+         <children>
+            <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="340.0" top="10.0" />
+               </FlowPane.margin>
+               <image>
+                  <Image url="@images/LogoSubastasQuindio.png" />
+               </image>
+            </ImageView>
+            <Button fx:id="btnVerOfertas" mnemonicParsing="false" text="Ver Ofertas">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button fx:id="btnIniciarSesion" mnemonicParsing="false" text="Iniciar Sesión">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </FlowPane.margin>
+            </Button>
+            <Button fx:id="btnRegistrarse" mnemonicParsing="false" text="Registrarse">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </FlowPane.margin>
+            </Button>
+         </children>
+      </FlowPane>
+      <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
+      <ListView layoutX="13.0" layoutY="100.0" prefHeight="383.0" prefWidth="847.0" />
    </children>
 </AnchorPane>
