--- a/src/view/CrudAnuncios.fxml
+++ b/src/view/CrudAnuncios.fxml
@@ -1,14 +1,99 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.ControllerCrudAnuncios"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ControllerCrudAnuncios">
+   <children>
+      <FlowPane prefHeight="65.0" prefWidth="858.0">
+         <children>
+            <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="500.0" top="10.0" />
+               </FlowPane.margin>
+               <image>
+                  <Image url="@images/LogoSubastasQuindio.png" />
+               </image>
+            </ImageView>
+            <Label text="Editor de Anuncios" textAlignment="RIGHT">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+         </children>
+      </FlowPane>
+      <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
+      <ListView fx:id="listViewAnuncios" layoutX="17.0" layoutY="96.0" prefHeight="350.0" prefWidth="400.0" />
+      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" text="Atrás" />
+      <Button fx:id="btnGuardarCambios" layoutX="341.0" layoutY="457.0" mnemonicParsing="false" text="Guardar Cambios" />
+      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" text="Editar" />
+      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" text="Nuevo" />
+      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" text="Eliminar" />
+      <FlowPane layoutX="454.0" layoutY="199.0" prefHeight="181.0" prefWidth="400.0">
+         <children>
+            <VBox prefHeight="149.0" prefWidth="135.0">
+               <children>
+                  <Label prefHeight="47.0" prefWidth="99.0" text="Nombre:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="10.0" prefHeight="47.0" prefWidth="89.0" text="Estado:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="57.0" prefHeight="47.0" prefWidth="143.0" text="Puja Ganadora:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox layoutX="10.0" layoutY="10.0" prefHeight="155.0" prefWidth="264.0">
+               <children>
+                  <TextField fx:id="txtNombre">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="9.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <ChoiceBox fx:id="choiseEstado" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <ChoiceBox fx:id="choisePujaGanadora" layoutX="17.0" layoutY="64.0" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+               </children>
+            </VBox>
+         </children>
+      </FlowPane>
+      <Button fx:id="btnVerPujas" layoutX="472.0" layoutY="457.0" mnemonicParsing="false" text="Ver Pujas" />
+   </children>
 </AnchorPane>
