--- a/src/view/CrudArticulos.fxml
+++ b/src/view/CrudArticulos.fxml
@@ -1,14 +1,157 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Separator?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.FlowPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="controllers.ControllerCrudArticulos"
-            prefHeight="400.0" prefWidth="600.0">
-
+<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ControllerCrudArticulos">
+   <children>
+      <FlowPane prefHeight="65.0" prefWidth="858.0">
+         <children>
+            <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="520.0" top="10.0" />
+               </FlowPane.margin>
+               <image>
+                  <Image url="@images/LogoSubastasQuindio.png" />
+               </image>
+            </ImageView>
+            <Label text="Editor de Artículos" textAlignment="RIGHT">
+               <font>
+                  <Font size="17.0" />
+               </font>
+            </Label>
+         </children>
+      </FlowPane>
+      <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
+      <ListView fx:id="listViewArticulos" layoutX="17.0" layoutY="96.0" prefHeight="350.0" prefWidth="400.0" />
+      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" text="Atrás" />
+      <Button fx:id="btnGuardarCambios" layoutX="373.0" layoutY="457.0" mnemonicParsing="false" text="Guardar Cambios" />
+      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" text="Editar" />
+      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" text="Nuevo" />
+      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" text="Eliminar" />
+      <FlowPane layoutX="454.0" layoutY="97.0" prefHeight="350.0" prefWidth="400.0">
+         <children>
+            <VBox prefHeight="350.0" prefWidth="135.0">
+               <children>
+                  <Label prefHeight="47.0" prefWidth="99.0" text="Nombre:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="10.0" prefHeight="47.0" prefWidth="75.0" text="Tipo:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="57.0" prefHeight="47.0" prefWidth="127.0" text="Descripción:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="104.0" prefHeight="47.0" prefWidth="75.0" text="Foto:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="198.0" prefHeight="47.0" prefWidth="125.0" text="Fecha Inicial:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="245.0" prefHeight="47.0" prefWidth="122.0" text="Fecha Final:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="245.0" prefHeight="47.0" prefWidth="122.0" text="Valor Inicial:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+               </children>
+            </VBox>
+            <VBox layoutX="10.0" layoutY="10.0" prefHeight="350.0" prefWidth="264.0">
+               <children>
+                  <TextField fx:id="txtNombre">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="9.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <ChoiceBox fx:id="choiseTipo" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <TextField fx:id="txtDescripcion" layoutX="17.0" layoutY="62.0">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="9.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <Button fx:id="btnEscogerImg" mnemonicParsing="false" prefHeight="31.0" prefWidth="250.0" text="Escoger imagen">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="12.0" />
+                     </VBox.margin>
+                  </Button>
+                  <DatePicker fx:id="datePickerInicial" prefHeight="34.0" prefWidth="248.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </VBox.margin>
+                  </DatePicker>
+                  <DatePicker fx:id="datePickerFinal" layoutX="17.0" layoutY="202.0" prefHeight="34.0" prefWidth="248.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
+                     </VBox.margin>
+                  </DatePicker>
+                  <TextField fx:id="txtValorInicial" layoutX="17.0" layoutY="253.0">
+                     <padding>
+                        <Insets bottom="5.0" left="5.0" right="5.0" top="9.0" />
+                     </padding>
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="5.0" />
+                     </VBox.margin>
+                  </TextField>
+               </children>
+            </VBox>
+         </children>
+      </FlowPane>
+   </children>
 </AnchorPane>
