Se crea el paquete de la Universidad e IUsuario
Se pone todo dentro del paquete co.edu.uniquindio.progiii.subastasquindio y además se crea una interface que se aplica en comprador y vendedor

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudArticulos.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudArticulos.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers.ControllerCrudArticulos">
+<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.ControllerCrudArticulos">
    <children>
       <FlowPane prefHeight="65.0" prefWidth="858.0">
          <children>
