Se crea el archivo Persistencia y sirven los log
Cambios:
- Se copia el ArchivoUtil
- Se ajusta el archivo Persistencia
- Se hacen modificaciones en el Singleton y controladores para guardar los logs de inicio y registro de usuario

Falta (por el momento):

- Guardar y cargar los usuarios en el ArchivoUsuarios
- Revisar lo que comenté varias veces en persistencia (persistir objetos File y Date)
- Poder diferir de Vendedor y Comprador al momento de registrarse e iniciar sesión
- Modificar la GUI respecto si son vendedores
- ¿Hacer un apartado de admin?(Puede ser medio oculto)(Se usaría para la gestión de usuarios)

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.MainController">
+<AnchorPane prefHeight="497.0" prefWidth="851.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.MainController">
    <children>
       <FlowPane prefHeight="65.0" prefWidth="858.0">
          <children>
             <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
                <FlowPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="230.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="200.0" top="10.0" />
                </FlowPane.margin>
                <image>
                   <Image url="@images/LogoSubastasQuindio.png" />
@@ -43,7 +43,7 @@
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </FlowPane.margin>
             </Button>
-            <Button fx:id="btnRegistrarse" mnemonicParsing="false" text="Registrarse" onAction="#registrarse" >
+            <Button fx:id="btnRegistrarse" mnemonicParsing="false" onAction="#registrarse" text="Registrarse">
                <FlowPane.margin>
                   <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
                </FlowPane.margin>
