--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -18,14 +18,14 @@
          <children>
             <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
                <FlowPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="200.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="180.0" top="10.0" />
                </FlowPane.margin>
                <image>
                   <Image url="@images/LogoSubastasQuindio.png" />
                </image>
             </ImageView>
             <Text fx:id="bienvenida" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
-            <Hyperlink fx:id="hyperlinkVendedor" text="¿Eres vendedor?">
+            <Hyperlink fx:id="hyperlinkRegistroVendedor" onAction="#registrarseVendedor" text="¿Quieres ser vendedor?">
                <FlowPane.margin>
                   <Insets right="10.0" />
                </FlowPane.margin>
