--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
@@ -35,16 +36,40 @@
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
       <ListView fx:id="listViewAnuncios" layoutX="17.0" layoutY="96.0" prefHeight="350.0" prefWidth="400.0" />
-      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" text="Atrás" />
-      <Button fx:id="btnGuardarCambios" layoutX="341.0" layoutY="457.0" mnemonicParsing="false" text="Guardar Cambios" />
-      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" text="Editar" />
-      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" text="Nuevo" />
-      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" text="Eliminar" />
-      <FlowPane layoutX="454.0" layoutY="199.0" prefHeight="181.0" prefWidth="400.0">
+      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" onAction="#atras" text="Atrás" />
+      <Button fx:id="btnGuardarCambios" layoutX="341.0" layoutY="457.0" mnemonicParsing="false" onAction="#guardarCambios" text="Guardar Cambios" />
+      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" onAction="#editar" text="Editar" />
+      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" />
+      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
+      <FlowPane layoutX="448.0" layoutY="136.0" prefHeight="181.0" prefWidth="400.0">
          <children>
             <VBox prefHeight="149.0" prefWidth="135.0">
                <children>
-                  <Label prefHeight="47.0" prefWidth="99.0" text="Nombre:">
+                  <Label prefHeight="47.0" prefWidth="99.0" text="Artículo:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="10.0" prefHeight="45.0" prefWidth="134.0" text="Fecha Inicial:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="145.0" prefHeight="45.0" prefWidth="125.0" text="Fecha final:">
+                     <padding>
+                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
+                     </padding>
+                     <font>
+                        <Font size="15.0" />
+                     </font>
+                  </Label>
+                  <Label layoutX="10.0" layoutY="190.0" prefHeight="45.0" prefWidth="121.0" text="Valor Inicial:">
                      <padding>
                         <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
                      </padding>
@@ -72,20 +97,32 @@
             </VBox>
             <VBox layoutX="10.0" layoutY="10.0" prefHeight="155.0" prefWidth="264.0">
                <children>
-                  <TextField fx:id="txtNombre">
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="9.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
-                     </VBox.margin>
-                  </TextField>
-                  <ChoiceBox fx:id="choiseEstado" prefHeight="31.0" prefWidth="250.0">
+                  <ChoiceBox fx:id="choiceArticulo" layoutX="17.0" layoutY="244.0" prefHeight="31.0" prefWidth="250.0">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
                   </ChoiceBox>
-                  <ChoiceBox fx:id="choisePujaGanadora" layoutX="17.0" layoutY="64.0" prefHeight="31.0" prefWidth="250.0">
+                  <DatePicker fx:id="dateInicial" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </DatePicker>
+                  <DatePicker fx:id="dateFinal" layoutX="17.0" layoutY="207.0" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </DatePicker>
+                  <TextField fx:id="txtValorInicial" layoutX="17.0" layoutY="19.0" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </TextField>
+                  <ChoiceBox fx:id="choicePujaGanadora" layoutX="17.0" layoutY="64.0" prefHeight="31.0" prefWidth="250.0">
+                     <VBox.margin>
+                        <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
+                     </VBox.margin>
+                  </ChoiceBox>
+                  <ChoiceBox fx:id="choicePujaGanadora" layoutX="17.0" layoutY="19.0" prefHeight="31.0" prefWidth="250.0">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
@@ -94,6 +131,6 @@
             </VBox>
          </children>
       </FlowPane>
-      <Button fx:id="btnVerPujas" layoutX="472.0" layoutY="457.0" mnemonicParsing="false" text="Ver Pujas" />
+      <Button fx:id="btnVerPujas" layoutX="472.0" layoutY="457.0" mnemonicParsing="false" onAction="#verPujas" text="Ver Pujas" />
    </children>
 </AnchorPane>
