--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudArticulos.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudArticulos.fxml
@@ -3,7 +3,6 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
@@ -36,14 +35,14 @@
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
       <ListView fx:id="listViewArticulos" layoutX="17.0" layoutY="96.0" prefHeight="350.0" prefWidth="400.0" />
-      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" text="Atrás" />
-      <Button fx:id="btnGuardarCambios" layoutX="373.0" layoutY="457.0" mnemonicParsing="false" text="Guardar Cambios" />
-      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" text="Editar" />
-      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" text="Nuevo" />
-      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" text="Eliminar" />
-      <FlowPane layoutX="454.0" layoutY="97.0" prefHeight="350.0" prefWidth="400.0">
+      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" onAction="#atras" text="Atrás" />
+      <Button fx:id="btnGuardarCambios" layoutX="373.0" layoutY="457.0" mnemonicParsing="false" onAction="#guardarCambios" text="Guardar Cambios" />
+      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" onAction="#editar" text="Editar" />
+      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" />
+      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
+      <FlowPane layoutX="449.0" layoutY="155.0" prefHeight="211.0" prefWidth="400.0">
          <children>
-            <VBox prefHeight="350.0" prefWidth="135.0">
+            <VBox prefHeight="210.0" prefWidth="135.0">
                <children>
                   <Label prefHeight="47.0" prefWidth="99.0" text="Nombre:">
                      <padding>
@@ -77,33 +76,9 @@
                         <Font size="15.0" />
                      </font>
                   </Label>
-                  <Label layoutX="10.0" layoutY="198.0" prefHeight="47.0" prefWidth="125.0" text="Fecha Inicial:">
-                     <padding>
-                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
-                     </padding>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="10.0" layoutY="245.0" prefHeight="47.0" prefWidth="122.0" text="Fecha Final:">
-                     <padding>
-                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
-                     </padding>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
-                  <Label layoutX="10.0" layoutY="245.0" prefHeight="47.0" prefWidth="122.0" text="Valor Inicial:">
-                     <padding>
-                        <Insets bottom="13.0" left="20.0" right="13.0" top="13.0" />
-                     </padding>
-                     <font>
-                        <Font size="15.0" />
-                     </font>
-                  </Label>
                </children>
             </VBox>
-            <VBox layoutX="10.0" layoutY="10.0" prefHeight="350.0" prefWidth="264.0">
+            <VBox layoutX="10.0" layoutY="10.0" prefHeight="218.0" prefWidth="264.0">
                <children>
                   <TextField fx:id="txtNombre">
                      <padding>
@@ -113,7 +88,7 @@
                         <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
                      </VBox.margin>
                   </TextField>
-                  <ChoiceBox fx:id="choiseTipo" prefHeight="31.0" prefWidth="250.0">
+                  <ChoiceBox fx:id="choiceTipo" prefHeight="31.0" prefWidth="250.0">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
@@ -131,24 +106,6 @@
                         <Insets bottom="7.0" left="7.0" right="7.0" top="12.0" />
                      </VBox.margin>
                   </Button>
-                  <DatePicker fx:id="datePickerInicial" prefHeight="34.0" prefWidth="248.0">
-                     <VBox.margin>
-                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
-                     </VBox.margin>
-                  </DatePicker>
-                  <DatePicker fx:id="datePickerFinal" layoutX="17.0" layoutY="202.0" prefHeight="34.0" prefWidth="248.0">
-                     <VBox.margin>
-                        <Insets bottom="7.0" left="7.0" right="7.0" top="7.0" />
-                     </VBox.margin>
-                  </DatePicker>
-                  <TextField fx:id="txtValorInicial" layoutX="17.0" layoutY="253.0">
-                     <padding>
-                        <Insets bottom="5.0" left="5.0" right="5.0" top="9.0" />
-                     </padding>
-                     <VBox.margin>
-                        <Insets bottom="7.0" left="7.0" right="7.0" top="5.0" />
-                     </VBox.margin>
-                  </TextField>
                </children>
             </VBox>
          </children>
