--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudUsuarios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudUsuarios.fxml
@@ -36,11 +36,11 @@
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="874.0" />
       <ListView fx:id="listViewArticulos" layoutX="17.0" layoutY="96.0" prefHeight="350.0" prefWidth="400.0" />
-      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" text="Atrás" />
-      <Button fx:id="btnGuardarCambios" layoutX="373.0" layoutY="457.0" mnemonicParsing="false" text="Guardar Cambios" />
-      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" text="Editar" />
-      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" text="Nuevo" />
-      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" text="Eliminar" />
+      <Button fx:id="btnAtras" layoutX="795.0" layoutY="457.0" mnemonicParsing="false" onAction="#atras" text="Atrás" />
+      <Button fx:id="btnGuardarCambios" layoutX="373.0" layoutY="457.0" mnemonicParsing="false" onAction="#guardarCambios" text="Guardar Cambios" />
+      <Button fx:id="btnEditar" layoutX="97.0" layoutY="458.0" mnemonicParsing="false" onAction="#editar" text="Editar" />
+      <Button fx:id="btnNuevo" layoutX="34.0" layoutY="458.0" mnemonicParsing="false" onAction="#nuevo" text="Nuevo" />
+      <Button fx:id="btnEliminar" layoutX="157.0" layoutY="458.0" mnemonicParsing="false" onAction="#eliminar" text="Eliminar" />
       <FlowPane layoutX="437.0" layoutY="159.0" prefHeight="200.0" prefWidth="400.0">
          <children>
             <VBox prefHeight="191.0" prefWidth="135.0">
