--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudArticulos.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudArticulos.fxml
@@ -101,7 +101,7 @@
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
                   </TextField>
-                  <Button fx:id="btnEscogerImg" mnemonicParsing="false" prefHeight="31.0" prefWidth="250.0" text="Escoger imagen">
+                  <Button fx:id="btnEscogerImg" mnemonicParsing="false" onAction="#escogerImagen" prefHeight="31.0" prefWidth="250.0" text="Escoger imagen">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="12.0" />
                      </VBox.margin>
