Se pueden crear los artículos y anuncios
No se ha implementado nada relacionado a los logs ni a la persistencia. Apenas se hizo la lógica necesaria para guardar todos los objetos necesarios

Falta:

- Implementar la persistencia
- Implementar los logs y excepciones en los diferentes archivos

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
@@ -117,7 +117,7 @@
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
                   </TextField>
-                  <ChoiceBox fx:id="choicePujaGanadora" layoutX="17.0" layoutY="64.0" prefHeight="31.0" prefWidth="250.0">
+                  <ChoiceBox fx:id="choiceEstado" layoutX="17.0" layoutY="64.0" prefHeight="31.0" prefWidth="250.0">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
