Se guardan los usuarios en persistencia
Hecho:

- Los usuarios pueden ingresar después de haber creado otra instancia de la aplicación
- Las ventanas ahora se conectan entre sí
- Se difiere entre un Vendedor y un Comprador, por lo que, por ejemplo, solo el vendedor tiene acceso a ver sus anuncios

Falta:

- Cerrar las ventanas que no están visibles
- Actualizar las ventanas Artículos y Anuncios cada que se de en el botón de "nuevo" de cada ventana respectivamente (Esto se hace para que siempre coja todos los artículos creados y siempre estén actualizados los anuncios)
- Ver cómo persistir los anuncios y artículos, sale un error de instanciamiento (InstantiationException)

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -18,13 +18,18 @@
          <children>
             <ImageView fitHeight="64.0" fitWidth="220.0" pickOnBounds="true" preserveRatio="true">
                <FlowPane.margin>
-                  <Insets bottom="10.0" left="10.0" right="180.0" top="10.0" />
+                  <Insets bottom="10.0" left="10.0" right="70.0" top="10.0" />
                </FlowPane.margin>
                <image>
                   <Image url="@images/LogoSubastasQuindio.png" />
                </image>
             </ImageView>
             <Text fx:id="bienvenida" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
+            <Button fx:id="btnVerAnuncios" mnemonicParsing="false" onAction="#verAnuncios" text="Ver Anuncios">
+               <FlowPane.margin>
+                  <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+               </FlowPane.margin>
+            </Button>
             <Hyperlink fx:id="hyperlinkRegistroVendedor" onAction="#registrarseVendedor" text="¿Quieres ser vendedor?">
                <FlowPane.margin>
                   <Insets right="10.0" />
