--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
@@ -132,5 +132,6 @@
          </children>
       </FlowPane>
       <Button fx:id="btnVerPujas" layoutX="472.0" layoutY="457.0" mnemonicParsing="false" onAction="#verPujas" text="Ver Pujas" />
+      <Button fx:id="btnNuevoArticulo" layoutX="670.0" layoutY="109.0" mnemonicParsing="false" onAction="#nuevoArticulo" text="Nuevo Artículo" />
    </children>
 </AnchorPane>
