--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -59,7 +59,7 @@
       </FlowPane>
       <Separator layoutX="-1.0" layoutY="80.0" prefHeight="10.0" prefWidth="1061.0" />
       <ListView fx:id="listViewInicio" layoutX="13.0" layoutY="100.0" onMouseClicked="#selectionListView" prefHeight="575.0" prefWidth="489.0" />
-      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="519.0" layoutY="102.0" onMouseMoved="#txtPujaFilled" prefHeight="573.0" prefWidth="523.0">
+      <AnchorPane fx:id="anchorPaneArticuloSelec" layoutX="519.0" layoutY="102.0" prefHeight="573.0" prefWidth="523.0">
          <children>
             <ImageView fx:id="photoArticulo" fitHeight="158.0" fitWidth="228.0" layoutX="42.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -76,7 +76,7 @@
                   <Font size="19.0" />
                </font>
             </Label>
-            <TextField fx:id="txtValorPuja" layoutX="237.0" layoutY="107.0" prefHeight="26.0" prefWidth="185.0" promptText="\$">
+            <TextField fx:id="txtValorPuja" layoutX="237.0" layoutY="107.0" onKeyTyped="#txtPujaFilled" prefHeight="26.0" prefWidth="185.0" promptText="\$">
                <font>
                   <Font size="19.0" />
                </font>
@@ -126,6 +126,7 @@
                   <Font size="19.0" />
                </font>
             </Label>
+            <Label fx:id="lblValorPujaInfo" layoutX="215.0" layoutY="151.0" prefHeight="17.0" prefWidth="298.0" />
          </children>
       </AnchorPane>
       <Label fx:id="lblInfo" layoutX="639.0" layoutY="274.0" prefHeight="72.0" prefWidth="284.0" text="¡Selecciona un artículo para visualizarlo!" textAlignment="CENTER" wrapText="true">
