Ya lógicamente de setea la puja y cambia el estado
ADVERTENCIA: Hay una duplicación de datos en lo que se refiere a las publicaciones, por el momento es manejable, pero es un poco ineficiente

Hecho:

- Se puede escoger tanto gráfica como lógicamnete la puja

- Al escoger la puja se cambia al estado de EN_ESPERA_PUJA_GANADORA

Falta:

- Intentar solucionar la advertencia (¿Es posible?)

- Hacer la transacción entre el comprador y el vendedor

- Mostrar un mensaje en pantalla para que diga que no puede hacer una puja

- Solucionar la excepción lanzada al momento de mostrar la imagen en la pantalla principal

- Solucionar la excepción lanzada al generar la transacción de prueba: al momento de hacer una, salirse, volver a entrar y hacer una transacción de prueba, lanza una excepción (Cannot invoke "java.time.LocalDateTime.getHour()" because "this.hora" is null)

- Implementar las acciones faltantes de cada uno de los CRUDs

- Lo que falte en el To-Do

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
@@ -123,7 +123,7 @@
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
                   </ChoiceBox>
-                  <ChoiceBox fx:id="choicePujaGanadora" layoutX="17.0" layoutY="19.0" prefHeight="31.0" prefWidth="250.0">
+                  <ChoiceBox fx:id="choicePujaGanadora" layoutX="17.0" layoutY="19.0" onMouseClicked="#addPujaGanadora" prefHeight="31.0" prefWidth="250.0">
                      <VBox.margin>
                         <Insets bottom="7.0" left="7.0" right="7.0" top="9.0" />
                      </VBox.margin>
