Se crean las transacciones + otros cambios
ADVERTENCIA: Hay una duplicación de datos en lo que se refiere a las publicaciones, por el momento es manejable, pero es un poco ineficiente

Hecho:

- Se crea una transacción al momento de escoger la puja ganadora

- La puja se registra en el log y se guarda en el XML

- En caso de que el artículo ya esté vendido o tenga una puja seleccionada, no se puede escoger otra y lanza una excepción y mensaje en la pantalla

- Se crea la excepción CannotSelectPujaGanadora para tener más variedad y precisión al momento de lanzar las excepciones

- Ahora la puja se guarda y se crea la transacción al momento de darle click en el botón de Guardar Cambios, de lo contrario, no pasará nada

Falta:

- Intentar solucionar la advertencia (¿Es posible?)

- Hacer la transacción entre el comprador y el vendedor

- Implementar las acciones faltantes de cada uno de los CRUDs

- Lo que falte en el To-Do

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/CrudAnuncios.fxml
@@ -134,6 +134,6 @@
       </FlowPane>
       <Button fx:id="btnVerPujas" layoutX="472.0" layoutY="457.0" mnemonicParsing="false" onAction="#verPujas" text="Ver Pujas" />
       <Button fx:id="btnNuevoArticulo" layoutX="670.0" layoutY="109.0" mnemonicParsing="false" onAction="#nuevoArticulo" text="Nuevo Artículo" />
-      <Label fx:id="lblInfo" layoutX="457.0" layoutY="417.0" prefHeight="17.0" prefWidth="383.0" />
+      <Label fx:id="lblInfo" layoutX="457.0" layoutY="407.0" prefHeight="37.0" prefWidth="383.0" text="Recuerda dar click en el botón de guardar cambios para la puja ganadora" textAlignment="CENTER" wrapText="true" />
    </children>
 </AnchorPane>
