Se implementó el CRUD pujas + Otros cambios
ADVERTENCIA: Hay una duplicación de datos en lo que se refiere a las publicaciones, por el momento es manejable, pero es un poco ineficiente

ADVERTENCIA 2: Estamos jodidos jajaj, la duplicación y la no sincronización de los datos entre las pujas del usuario y las pujas de las publicaciones

Hecho:

- Se creó el CRUD de las pujas y se implementó las acciones de ese CRUD

- El usuario puede eliminar una puja, pero solo se elimina para él

Falta:

- Crear una función de eliminar pujas que se pueda usar en diferentes ventanas para solucionar la segunda advertencia

- Hacer el mensaje si una de las pujas del comprador fue escogida como la ganadora

- Intentar solucionar las advertencias (¿Es posible?)

- Lo que falte en el To-Do

--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/MainView.fxml
@@ -135,5 +135,6 @@
             <Font size="24.0" />
          </font>
       </Label>
+      <Button fx:id="btnVerPujas" layoutX="952.0" layoutY="652.0" mnemonicParsing="false" onAction="#verPujas" prefHeight="25.0" prefWidth="100.0" text="Ver mis pujas" visible="false" />
    </children>
 </AnchorPane>
