--- a/src/co/edu/uniquindio/progiii/subastasquindio/view/Login.fxml
+++ b/src/co/edu/uniquindio/progiii/subastasquindio/view/Login.fxml
@@ -7,8 +7,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.ControllerLogin">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="co.edu.uniquindio.progiii.subastasquindio.controllers.ControllerLogin">
    <children>
       <Text layoutX="150.0" layoutY="63.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Bienvenido de nuevo" textAlignment="CENTER" wrappingWidth="300.13671875">
          <font>
@@ -16,8 +15,8 @@
          </font>
       </Text>
       <TextField fx:id="usuario" layoutX="226.0" layoutY="166.0" />
-      <PasswordField fx:id="contra" layoutX="226.0" layoutY="245.0" />
-      <Button layoutX="257.0" layoutY="292.0" mnemonicParsing="false" text="Iniciar Sesión" onAction="#login" />
+      <PasswordField fx:id="contra" layoutX="226.0" layoutY="245.0" onAction="#login" />
+      <Button layoutX="257.0" layoutY="292.0" mnemonicParsing="false" onAction="#login" text="Iniciar Sesión" />
       <Text layoutX="226.0" layoutY="162.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Usuario" />
       <Text layoutX="227.0" layoutY="241.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Contraseña" />
       <Text fx:id="feedback" layoutX="289.0" layoutY="352.0" strokeType="OUTSIDE" strokeWidth="0.0" text=" " />
